[package]
name = "sfo-pool"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/wugren/sfo-pool.git"
description = "A work allocation pool"

[dependencies]
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "time"] }
async-trait = "0.1.82"
notify-future = "0.1.4"
